--- a/domain.yml
+++ b/domain.yml
@@ -44,6 +44,11 @@ slots:
         entity: vehicle_information
     influence_conversation: true
 
+actions:
+  - action_convert_cc_to_phan_khoi
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+
+  
